--- a/styles/hero.css
+++ b/styles/hero.css
@@ -1,29 +1,19 @@
 section.hero {
   margin: 20rem auto 30rem auto;
   grid-column: 1 / -1;
+  overflow: hidden;
 }
 
 .blurred-oval {
   position: absolute;
   background-color: #00ffe0;
-  border-radius: 50%;
-  width: 80vw;
-  height: 80vw;
-  z-index: -1;
+  width: 25vw;
+  height: 50vw;
+  border-radius: 25vw 0 0 25vw;
   filter: blur(200px);
-  top: 15rem;
-  right: -70vw;
-}
-
-.small-blurred-oval {
-  position: absolute;
-  background-color: #d000ff84;
-  border-radius: 50%;
-  width: 34.3rem;
-  height: 34.3rem;
-  filter: blur(20px);
-  top: 60rem;
-  right: 12rem;
+  z-index: -1;
+  right: 0;
+  top: 20rem;
 }
 
 .hero-container {
