--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,6 @@ body {
   grid-template-columns: repeat(12, 7.5rem);
   grid-gap: 2rem;
   justify-content: center;
-  overflow-x: hidden;
 }
 
 main {
